# rogvibe

./: Makefile  README.md  pyproject.toml
src/rogvibe/: __init__.py  __main__.py  app.py  config.py
src/rogvibe/utils/: detector.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_constants.py  test_detector.py  test_main.py
tests/test_models/: test_messages.py
tests/test_utils/: test_executor.py
